--- a/src/example/Makefile
+++ b/src/example/Makefile
@@ -1,27 +1,28 @@
 CXX      := clang++
-CXXFLAGS := -Wall -Wextra -Werror -Wno-sign-compare -Wno-unused-variable -fexceptions -Wno-unused-function  -std=c++17 -DDRYRUN -ggdb
+CXXFLAGS := -Wall -Wextra -Werror -Wno-sign-compare -Wno-unused-variable -fexceptions -Wno-unused-function  -std=c++17 -ggdb
 CFLAGS := -Wall -Wextra -Werror -Wno-sign-compare -Wno-unused-variable -fexceptions -Wno-unused-function 
 LDFLAGS  := -L/usr/lib -lstdc++ -lm -Llibbase -Llibpcrecpp -Llibprocessgroup
 LD := clang
 BUILD    := ./build
 OBJ_DIR  := $(BUILD)/objects
 APP_DIR  := $(BUILD)
-INCLUDE  := -I./ -I../tarlib/
+INCLUDEPATH  := -I../tarlib/
 EXTSRC      := $(wildcard ../tarlib/*.cpp)
 SRC      := $(wildcard *.cpp)
 
 OBJECTS := $(EXTSRC:%.cpp=$(OBJ_DIR)/%.o)
-PROGRAMS := $(SRC:%.cpp=%)
+PROGRAMS := $(SRC:%.cpp=%.exe)
 
 all: $(PROGRAMS)
+	@echo Done
 
 $(OBJ_DIR)/%.o: %.cpp
 	@mkdir -p $(@D)
-	$(CXX) $(CXXFLAGS) $(INCLUDE) -o $@ -c $<
+	$(CXX) $(CXXFLAGS) $(INCLUDEPATH) -o $@ -c $<
 
-%: %.cpp $(OBJECTS)
+%.exe: %.cpp $(OBJECTS)
 	@mkdir -p $(@D)
-	$(CXX) $(INCLUDE) $(LDFLAGS) $< $(OBJECTS)  -o $@
+	$(CXX) $(INCLUDEPATH) $(LDFLAGS) $< $(OBJECTS)  -o $@
 
 .PHONY: all build clean debug release
 
@@ -38,3 +39,4 @@ release: all
 clean:
 	-@rm -rvf $(OBJ_DIR)/*
 	-@rm -rvf $(PROGRAMS)
+	-@rm -fv $(OBJECTS)
